--- a/main.html
+++ b/main.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie Detail Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="movieContainer">
+        <img src="movie-poster.jpg" alt="Movie Poster" class="moviePic">
+        <p class="movieDetail">This is a brief description of the movie. It provides an overview of the plot, characters, and other interesting details.</p>
+    </div>
 </body>
-
 </html>
